# Github-clone

./: CMakeLists.txt  README.md  db.sqlite3
github/: asgi.py  settings.py  urls.py  wsgi.py
github-manager/: main.cpp
github_application/: admin.py  apps.py  models.py  urls.py  views.py
github_application/management/commands/: seed_data.py
github_application/migrations/: 0001_initial.py
templates/: base.html  dashboard.html  home.html  search.html
templates/auth/: login.html  profile_edit.html  signup.html
templates/issues/: issue_list.html
templates/pulls/: pr_create.html
templates/repos/: explore.html  repo_create.html  repo_detail.html  repo_edit.html
templates/users/: followers.html  following.html
